kustomize/backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  #  labels:
  #    app: fint-betaling-backend
  name: fint-betaling-backend

spec:
  ports:
    - port: 8080
  type: ClusterIP
#  selector:
#    app: fint-betaling-backend
