kustomize/backend/base/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fint-betaling-backend
spec:
  entryPoints:
    - web
  routes:
#    - match: Host(`betaling-viken2.felleskomponent.no`) && PathPrefix(`/api`)
#      kind: Rule
#      services:
#        - name: fint-betaling-backend
#          port: 8080
